# DiverAgent

./: .gitignore  README.md  pyproject.toml
docs/: phase3_todolist.md
experiments/analogy/: backbone.py  config.py  dataset.py  evaluate.py  run_all.py  stage1_train_backbone.py  stage2_train_probe.py  tee_logger.py  visualize.py
experiments/analogy/results/: phase3_results.json
experiments/dsprites/: __init__.py  backbone.py  config.py  dataset.py  evaluate.py  gen_dataset.py  run_all.py  stage1_train_backbone.py  stage2_train_probe.py  visualize.py
experiments/dsprites/results/: phase2a_results.json
experiments/mitstates/: backbone.py  config.py  dataset.py  evaluate.py  run_all.py  stage1_train_backbone.py  stage2_train_probe.py  visualize.py
experiments/mitstates/results/: phase2b_results.json
experiments/mnist_toy/: evaluate.py  pre_phase2.py  run_all.py  train_backbone.py  train_probe.py  visualize.py
experiments/mnist_toy/results/: ablation_results.json  gate_verify_dci.json  gate_verify_results.json  random_baseline_results.json  results_digit_0.json  results_digit_1.json  results_digit_2.json  results_digit_3.json  results_digit_4.json  results_digit_5.json  results_digit_6.json  results_digit_7.json  results_digit_8.json  results_digit_9.json
experiments/omniglot/: backbone.py  config.py  dataset.py  evaluate.py  run_all.py  stage1_train_backbone.py  stage2_train_probe.py
experiments/omniglot/results/: phase1_results.json
src/diver_agent/: backbone.py  cbdp.py  gate.py  losses.py  probe.py
(+1 files in other folders)
